<resources>
    <string name="app_name">ProductsApiCaseStudy</string>
    <string name="tab1">Home</string>
    <string name="tab2">Cart</string>
    <string name="tab3">Favorites</string>
    <string name="tab4">User</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="e_market">E-Market</string>
    <string name="price">Price:</string>
    <string name="total">Total:</string>
    <string name="complete">Complete</string>
    <string name="sort_by">Sort By</string>
    <string name="search">Search</string>
    <string name="filters">Filters:</string>
    <string name="select_filter">Select Filter</string>
    <string name="old_to_new">Old to new</string>
    <string name="new_to_old">New to old</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
</resources>