<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:navigationIcon="@drawable/close_icon"
        app:title="Filter"
        app:titleCentered="true"
        app:titleMarginEnd="40dp"
        app:titleMarginStart="40dp"
        app:titleTextAppearance="@style/R20"
        app:titleTextColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sort_by"
                android:textAppearance="@style/R12"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/rdgButtonSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/rbOldToNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/accentColor"
                    android:padding="6dp"
                    android:text="@string/old_to_new"
                    android:textAppearance="@style/R14"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />

                <RadioButton
                    android:id="@+id/rbNewToOld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/accentColor"
                    android:padding="6dp"
                    android:text="@string/new_to_old"
                    android:textAppearance="@style/R14"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />

                <RadioButton
                    android:id="@+id/rbPriceHighToLow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/accentColor"
                    android:padding="6dp"
                    android:text="@string/price_high_to_low"
                    android:textAppearance="@style/R14"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />

                <RadioButton
                    android:id="@+id/rbPriceLowToHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/accentColor"
                    android:padding="6dp"
                    android:text="@string/price_low_to_high"
                    android:textAppearance="@style/R14"
                    android:textColor="@color/black"
                    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/brand"
                android:textAppearance="@style/R12"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gray_background_radius_8"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/search_icon"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/editTextSearchBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:textAppearance="@style/R14"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewBrands"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:nestedScrollingEnabled="false"
                android:scrollbars="vertical"
                tools:listitem="@layout/brand_item" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/model"
                android:textAppearance="@style/R12"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/gray_background_radius_8"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/search_icon"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/editTextSearchModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/search"
                    android:inputType="text"
                    android:textAppearance="@style/R14"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewModels"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                tools:listitem="@layout/model_item" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/accentColor"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="Apply"
        android:textAppearance="@style/SB16"
        android:textColor="@color/white"
        tools:ignore="HardcodedText" />

</LinearLayout>