<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.views.home.HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accentColor"
                android:title="@string/e_market"
                android:titleTextColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_background_radius_8"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:src="@drawable/search_icon"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/editTextSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/search"
                        android:inputType="text"
                        android:textAppearance="@style/R14"
                        android:textColor="@color/black"
                        tools:ignore="Autofill" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtFiltersInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/filters"
                        android:textAppearance="@style/SB16"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gray_background_radius_8"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingHorizontal="36dp"
                        android:paddingVertical="6dp"
                        android:text="@string/select_filter"
                        android:textAllCaps="false"
                        android:textAppearance="@style/R14" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/product_item" />
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>