<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.views.cart.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accentColor"
            android:title="@string/e_market"
            android:titleTextColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:visibility="visible"
            tools:listitem="@layout/cart_item" />

        <LinearLayout
            android:paddingHorizontal="16dp"
            android:visibility="gone"
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/basket_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:lineSpacingExtra="4dp"
                android:text="Your cart is currently empty. You can select products and add them to the cart by clicking the 'Add To Cart' button in the home page and detail pages. "
                android:textAlignment="center"
                android:textAppearance="@style/R20"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/total"
                    android:textAppearance="@style/R16"
                    android:textColor="@color/accentColor" />

                <TextView
                    android:id="@+id/txtProductsTotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="4dp"
                    android:textAppearance="@style/R16"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnComplete"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/blue_button_background_radius_4"
                android:foreground="?android:attr/selectableItemBackground"
                android:includeFontPadding="false"
                android:paddingHorizontal="36dp"
                android:paddingVertical="8dp"
                android:text="@string/complete"
                android:textAppearance="@style/R16"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>